# stackofcards

./: README.md
backend/: .gitignore  Cargo.toml  README.md
backend/bindings/: BooleanExpression.ts  Card.ts  CardCollectionExpression.ts  CardExpression.ts  CardSelector.ts  CardSelectorExpression.ts  CardSet.ts  CardSetExpression.ts  ChoiceAction.ts  ChoiceSelection.ts  ChoiceSelectionEnum.ts  Comparison.ts  ConditionalStatement.ts  Expression.ts  GameAction.ts  GameChat.ts  GameConfig.ts  GameCreateRequest.ts  GameInfo.ts  GameSnapshot.ts  GameStatus.ts  GameWaitingStatus.ts  LoginUser.ts  MultiPlayerTarget.ts  MultiZoneTarget.ts  NewGame.ts  NewUser.ts  NumberExpression.ts  Offer.ts  OfferCase.ts  OfferChoice.ts  OrderExpression.ts  Pagination.ts  Pattern.ts  PatternPiece.ts  Phase.ts  PlayerAssignmentRule.ts  PlayerClass.ts  PlayerCollectionExpression.ts  PlayerCommand.ts  (+33 more)
backend/migrations/: 1_setup.sql  2_game.sql  2_user.sql  3_session.sql  4_ruleset.sql  5_ruleset_additions.sql  6_ruleset_owner_names.sql
backend/src/: cards.rs  config.rs  errors.rs  lib.rs  main.rs  ruleset.rs  state.rs
backend/src/engine/: cards.rs  game.rs  mod.rs  ruleset.rs
backend/src/engine/core/: cards.rs  dsl.md  game.rs  identifiers.rs  mod.rs  ruleset.rs  zones.rs
backend/src/engine/core/dsl/: ast.rs  ast_raw.lalrpop  ast_raw.rs  ast_typed.rs  grammar.lalrpop  mod.rs  pass0_validation.rs  tests.rs
backend/src/engine/interpreter/: game.rs
backend/src/socs/: game.rs
backend/src/state/: app.rs  auth.rs  game.rs  game_wrapper.rs  mod.rs  player.rs  ruleset.rs  user.rs  web.rs
backend/src/state/engine_wrapper/: connections.rs  handler.rs  interface.rs  mod.rs  names.rs  status.rs  wrapper.rs
backend/src/v1/: game.rs  games.rs  mod.rs  object_test.rs  player.rs  ruleset.rs  rulesets.rs  users.rs
backend/src/v1/schema/: common.rs  game_schema.rs  mod.rs  ruleset_schema.rs  user_schema.rs
backend/src/wss/: game.rs  mod.rs  rooms.rs
(+137 files in other folders)
