[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde = "1.0.219"
serde_json = "1.0"
ts-rs = "10.1"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }

tracing = "0.1"
tracing-subscriber = "0.3"

sqlx = { version = "0.8", features = [ "runtime-tokio-native-tls", "postgres", "uuid", "time" ] }
