[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "engine"
path = "src/engine/bin/main.rs"

[build-dependencies]
lalrpop = "0.22.1"

[dependencies]

uuid = { version = "1.16.0", features = ["v1", "v4", "serde"] }
axum = { version = "0.8.4", features = ["macros", "ws"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }

serde = "1.0.219"
serde_json = "1.0"
ts-rs = "10.1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "*"
tower = { version = "0.4", features = ["full"] }
rand = "0.9.1"

tracing = "0.1"
tracing-subscriber = "0.3"

chrono = "0.4.41"
env-file-reader = "0.3.0"

sqlx = { version = "0.8", features = [ "runtime-tokio-native-tls", "postgres", "uuid", "chrono" ] }


lalrpop-util = { version = "0.21.0", features = ["lexer", "unicode"] }
argon2 = "0.5.3"
anyhow = "1.0.98"
axum-login = "0.17.0"
